ghost-sumi/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ghost
spec:
  selector:
    matchLabels:
      app: ghost
  serviceName: "ghost"
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:6.0.9@sha256:0476b5029ce6ca0dc6cc0f4b1515a3c7982e28163f0d66fb3c230b0a257b8043
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: ghost-content
              mountPath: /var/lib/ghost/content
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: ghost-content
          persistentVolumeClaim:
            claimName: ghost-content
